ReservationServiceImplementation changes map to use right dto method